# diit-prog-pr4

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  double.h  matrix.h
src/: main.cpp
src/lib/: double.cpp
tests/: test_double.cpp  test_matrix.cpp
